2003-08-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/misc.tcl (sn_load_xref): Use list command
	when creating cbrowser2 command so that paths
	with spaces in them work properly.

2003-08-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/misc.tcl (load_xref_pipe, event_LoadPipeInput):
	Add check for the err "abnormal program termination"
	since this seems to be included when a Win32
	child process crashes.

2003-07-25  Mo DeJong  <mdejong@users.sourceforge.net>

	* mkdist.txt: Add short description of steps
	one must take to create a SN dist file.

2003-07-23  Mo DeJong  <mdejong@users.sourceforge.net>

	Add SN-52A1-2003-07-23 tag.

2003-07-23  Mo DeJong  <mdejong@users.sourceforge.net>

	* NEWS: Add release notes for 5.1 series and
	5.2a1.
	* README.TXT: Note PHP and Python support.
	* configure: Regen.
	* configure.in: Change version to 5.2a1.
	* mkdist.sh: Copy NEWS file to NEWS.TXT
	in the toplevel dist dir.

2003-07-22  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/editorpane.tcl (goto): When looking up
	the line and column position of a symbol in
	the editor, first search for symbol and
	then for the highlight marker. This will
	select the region defined as the highlight
	range instead of where the symbols starts.
	Older parsers that start a symbol where
	the highlight starts will still work.
	* gui/retriever.tcl (read_matched_from_db):
	When reading the symbols from a file, return
	the highlight range instead of the symbol
	start range. This fixes a bug where a symbol
	in a file gets clicked on in the symbol browser,
	but the highlight range would not get selected
	in the editor.
	* parsers/common/parser.c (put_symbol): When
	writing a symbol table entry (like fu, cl, mi)
	use the highlight range instead of the whole
	symbol range. This fixes a bug in the retriever
	where a symbol gets clicked on but the highlight
	range is not selected.
	* tests/parsers/c.test: Add new test file with
	a couple of C regression tests.